# D1py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  xt.py
D1py/: __init__.py  _models.py  _types.py  client.py  d1py.py  exceptions.py
docs/: async-vs-sync.md  configuration.md  database-management.md  error-handling.md  export-import.md  getting-started.md  queries.md  research_findings.md  time-travel.md
tests/: test_client.py  test_d1py.py
