[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfd1py"
version = "2.0.0"
description = "Async Python SDK for Cloudflare D1 Databases"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Suleman Elahi", email = "suleman@duck.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]

[project.urls]
Homepage = "https://github.com/Suleman-Elahi/D1py"
Documentation = "https://github.com/Suleman-Elahi/D1py#readme"
Repository = "https://github.com/Suleman-Elahi/D1py"
Issues = "https://github.com/Suleman-Elahi/D1py/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["N999"]

[tool.hatch.build.targets.wheel]
packages = ["D1py"]
